--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="public/img/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
-		<link rel="stylesheet" href="public/css/commont.css">
+		<link rel="stylesheet" href="public/css/common.css">
 		<style>
 			.mod-content{
 				line-height: 20px;
