--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 		<div class="wrapper">
 			<header>
 				<div class="mod-head">
-					<h1>Passer-by</h1>
+					<h1>PASSER-BY</h1>
 					<p>一只程序猿的禅意生活</p>
 				</div>
 				<div class="mod-list">
