吃豆游戏入口

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 						<section>
 							<h3>游戏</h3>
 							<ul>
+								<li><a href="/pacman/" target="_blank">吃豆游戏</a></li>
 								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
 							</ul>
 						</section>
