--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
 								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
 								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
-								<li><a href="/widget/jquery-calendar/" target="_blank">日历</a></li>
+								<li>
+									<a href="/widget/jquery-calendar/" target="_blank">日历</a>
+									/<a href="/widget/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+								</li>
 								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
 								<li><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></li>
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
