--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
 		<meta name="description" content="路人甲个人网站,展示前端开发作品,致力于web开发组件化,Keep It Simple,Stupid">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件,JavaScript">
-		<meta name="author" content="木木阳,mumuy" />
+		<meta name="author" content="木木阳,mumuy,passerby" />
 		<link rel="shortcut icon" href="/public/img/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/css/common.css">
