--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 						<li><a href="/">项目</a></li>
 						<li class="active"><a href="/about.html">关于</a></li>
 						<li><a href="/comment.html">留言</a></li>
-						<li><a href="http://github.com/mumuy/" target="_blank">Github</a></li>
+						<li><a href="https://github.com/mumuy/" target="_blank">Github</a></li>
 					</ul>
 				</div>
 			</header>
