--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<section>
 							<h3>工具</h3>
 							<ul>
-								<li><a href="/useragent/" target="_blank">浏览器及设备判断</a></li>
+								<li><a href="/tools-library/browser/" target="_blank">浏览器及设备判断</a></li>
 							</ul>
 						</section>
 						<section>
