--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 							<ul>
 								<li><a href="/finder/" target="_blank">最短寻址</a></li>
 								<li><a href="/calc24/" target="_blank">24点计算</a></li>
+								<li><a href="/relationship/" target="_blank">中国家庭称谓计算</a></li>
 							</ul>
 						</section>
 						<section>
