--- a/about.html
+++ b/about.html
@@ -13,6 +13,15 @@
 			.mod-content{
 				line-height: 20px;
 			}
+			.mod-content blockquote{
+				width: 80%;
+				margin:0 30px 30px;
+				padding:7px 15px;
+				background: #f8f8f8;
+			}
+			.mod-content .from{
+				text-align: right;
+			}
 			.mod-content section{
 				margin-bottom: 18px;
 			}
@@ -54,16 +63,16 @@
 			<div class="container">
 				<div class="main">
 					<div class="mod-content">
+						<blockquote>
+							<p>I sit at my window this morning where the world like a passer-by stops for a moment, nods to me and goes.</p>
+							<p>我今晨坐在窗前，世界如一个路人似的，停留了一会，向我点点头又走过去了。</p>
+							<p class="from">--泰戈尔《飞鸟集》</p>
+						</blockquote>
 						<section>
-							<h3>关于我</h3>
-							<p>网名：木木阳</p>
+							<h3>联系方式</h3>
 							<p>邮箱：zhenghaole1990@126.com</p>
-							<p>喜欢特立独行，向往简约而不简单的生活，追求以修禅的方式洞察编程……活着就是一种修行！</p>
-						</section>
-						<section>
-							<h3>关于网站</h3>
-							<p>QQ交流群:110827470</p>
-							<p>passer-by,中文解释:过路人、行人、过客。在茫茫的人海里，我们彼此都在扮演着过客的角色。而我们自身也不过是历史长河中的过客而已……以过客的视角去观察，以平凡的心态去生活，这就是网站名称的由来。</p>
+							<p>QQ交流群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=7c4c05ef6051dc4d39a30367ac40bf6993b68ae164cd52286fb5451ffe847d62">110827470</a><p>
+							<p>其他：<a href="https://github.com/mumuy/" target="_blank">github</a></p>
 						</section>
 						<section>
 							<h3>友情链接</h3>
