--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 							<h3>联系方式</h3>
 							<p>邮箱：zhenghaole1990@126.com</p>
 							<p>QQ交流群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=7c4c05ef6051dc4d39a30367ac40bf6993b68ae164cd52286fb5451ffe847d62">110827470</a><p>
-							<p>其他：<a href="https://github.com/mumuy/" target="_blank">github</a></p>
+							<p>其他：<a href="https://github.com/mumuy/" target="_blank">Github</a></p>
 						</section>
 						<section>
 							<h3>友情链接</h3>
