--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
 				margin:0 30px 30px;
 				padding:7px 15px;
 				background: #f8f8f8;
+				border-top-right-radius: 24px;
+				border-bottom-left-radius: 24px;
 			}
 			.mod-content .from{
 				text-align: right;
