--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
 		<meta name="description" content="路人甲个人网站,展示前端开发作品,致力于web开发组件化,Keep It Simple,Stupid">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件,JavaScript">
 		<meta name="author" content="木木阳,mumuy,passerby" />
-		<link rel="shortcut icon" href="/public/img/favicon.png">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
-		<link rel="stylesheet" href="public/css/common.css">
+		<link rel="stylesheet" href="public/style/common.css">
 		<style>
+			.container{
+				background: url('public/image/bg.jpg') center center no-repeat;
+				-webkit-filter: grayscale(100%);
+				filter: grayscale(100%);
+			}
+			.mod-foot{
+				color:#fff;
+			}
+			.mod-foot a{
+				color:#fff;
+			}
+
 			.mod-content section{
 				margin-bottom: 18px;
 			}
@@ -53,86 +65,19 @@
 		<div class="wrapper">
 			<header>
 				<div class="mod-head">
-					<h1>PASSER-BY</h1>
+					<h1><a href="/">PASSER-BY</a></h1>
 					<p>一只程序猿的禅意生活</p>
 				</div>
 				<div class="mod-list">
 					<ul>
-						<li class="active"><a href="/">项目</a></li>
-						<li><a href="/about.html">关于</a></li>
+						<li><a href="/project.html">项目</a></li>
 						<li><a href="/comment.html">留言</a></li>
-						<li><a href="https://github.com/mumuy/" target="_blank">Github</a></li>
+						<li><a href="/about.html">关于</a></li>
 					</ul>
 				</div>
 			</header>
 			<div class="container">
-				<div class="main">
-					<div class="mod-content">
-						<section>
-							<h3>算法</h3>
-							<ul>
-								<li><a href="/finder/" target="_blank">最短寻址</a></li>
-								<li><a href="/calc24/" target="_blank">24点计算</a></li>
-								<li><a href="/relationship/" target="_blank">中国家庭称谓计算</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>工具</h3>
-							<ul>
-								<li><a href="/tools-library/browser/" target="_blank">浏览器及设备判断</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>jQuery组件库</h3>
-							<ul>
-								<li>
-									<a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a>
-									/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
-								</li>
-								<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
-								<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
-								<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
-								<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
-								<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
-								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
-								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
-								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
-								<li>
-									<a href="/widget/jquery-calendar/" target="_blank">日历</a>
-									/<a href="/widget/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
-								</li>
-								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
-								<li><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></li>
-								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>Zepto组件库</h3>
-							<ul>
-								<li><a href="/widget/zepto-slider/" target="_blank">轮播</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>UI库</h3>
-							<ul>
-								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>站点</h3>
-							<ul>
-								<li><a href="http://passerby.cn" target="_blank">随机导航网 [passerby.cn]</a></li>
-							</ul>
-						</section>
-						<section>
-							<h3>游戏</h3>
-							<ul>
-								<li><a href="/pacman/" target="_blank">吃豆游戏</a></li>
-								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
-							</ul>
-						</section>
-					</div>
-				</div>
+
 			</div>
 			<footer>
 				<div class="mod-foot">
