--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="public/img/favicon.png">
+		<link rel="shortcut icon" href="public/image/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
-		<link rel="stylesheet" href="public/css/common.css">
+		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content{
 				line-height: 20px;
@@ -55,10 +55,9 @@
 				</div>
 				<div class="mod-list">
 					<ul>
-						<li><a href="/">项目</a></li>
-						<li class="active"><a href="/about.html">关于</a></li>
+						<li><a href="/project.html">项目</a></li>
 						<li><a href="/comment.html">留言</a></li>
-						<li><a href="https://github.com/mumuy/" target="_blank">Github</a></li>
+						<li class="active"><a href="/about.html">关于</a></li>
 					</ul>
 				</div>
 			</header>
