--- a/comment.html
+++ b/comment.html
@@ -41,10 +41,9 @@
 				</div>
 				<div class="mod-list">
 					<ul>
-						<li><a href="/">项目</a></li>
-						<li><a href="/about.html">关于</a></li>
+						<li><a href="/project.html">项目</a></li>
 						<li class="active"><a href="/comment.html">留言</a></li>
-						<li><a href="https://github.com/mumuy/" target="_blank">Github</a></li>
+						<li><a href="/about.html">关于</a></li>
 					</ul>
 				</div>
 			</header>
