--- a/comment.html
+++ b/comment.html
@@ -36,7 +36,7 @@
 		<div class="wrapper">
 			<header>
 				<div class="mod-head">
-					<h1>PASSER-BY</h1>
+					<h1><a href="/">PASSER-BY</a></h1>
 					<p>一只程序猿的禅意生活</p>
 				</div>
 				<div class="mod-list">
