--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 			.container{
 				background: url('public/image/bg.jpg') center center no-repeat;
 				-webkit-filter: grayscale(100%);
+				-moz-filter: grayscale(100%);
+				-o-filter: grayscale(100%);
 				filter: grayscale(100%);
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+			    -o-background-size: cover;
+				background-size: cover;
 			}
 			.mod-foot{
 				color:#fff;
