--- a/comment.html
+++ b/comment.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>留言</title>
+		<title>留言 - 路人甲</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
 		<meta name="description" content="web开发组件化">
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
