--- a/project.html
+++ b/project.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>路人甲 · Passer-by</title>
+		<title>项目 - 路人甲</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="前端开发作品,致力于web开发组件化,Keep It Simple,Stupid">
-		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件,JavaScript">
-		<meta name="author" content="木木阳,mumuy,passerby" />
+		<meta name="description" content="web开发组件化">
+		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
+		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
