--- a/about.html
+++ b/about.html
@@ -71,6 +71,10 @@
 							<p class="from">--泰戈尔《飞鸟集》</p>
 						</blockquote>
 						<section>
+							<h3>关于我</h3>
+							<p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自从走上程序猿的不归路……这就是我，一个路人甲~</p>
+						</section>
+						<section>
 							<h3>联系方式</h3>
 							<p>邮箱：zhenghaole1990@126.com</p>
 							<p>QQ群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=7c4c05ef6051dc4d39a30367ac40bf6993b68ae164cd52286fb5451ffe847d62">110827470</a><p>
