添加摄影门类

--- a/photograph.html
+++ b/photograph.html
@@ -2,25 +2,31 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>留言 - 路人甲</title>
+		<title>摄影 - 路人甲</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="网站留言">
-		<meta name="keywords" content="留言">
+		<meta name="description" content="个人摄影作品">
+		<meta name="keywords" content="摄影,照片,爱好">
 		<meta name="author" content="木木阳,mumuy" />
-		<link rel="shortcut icon" href="public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/index.html">
+		<link rel="shortcut icon" href="/public/image/favicon.png">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content{
-				line-height: 20px;
+				padding-top: 90px;
 			}
 			.mod-content section{
 				margin-bottom: 18px;
+				text-align: center;
 			}
-			.mod-content h3{
-				padding-left: 2px;
-				margin-bottom: 5px;
-				font-size: 16px;
+			.mod-content img{
+				width: 96%;
+				max-width: 540px;
+			}
+			.mod-content p{
+				line-height: 32px;
+				color: #666;
+			}
+			.mod-content span{
+				margin:0 5px;
 			}
 		</style>
 		<script>
@@ -43,8 +49,8 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
-						<li><a href="/photograph.html">摄影</a></li>
-						<li class="active"><a href="/comment.html">留言</a></li>
+						<li class="active"><a href="/photograph.html">摄影</a></li>
+						<li><a href="/comment.html">留言</a></li>
 						<li><a href="/about.html">关于</a></li>
 					</ul>
 				</div>
@@ -53,7 +59,8 @@
 				<div class="main">
 					<div class="mod-content">
 						<section>
-							<div id="uyan_frame"></div>
+							<div><img src="public/image/photos/20150828.jpg" width="540"></div>
+							<p><span>2015年8月</span><span>台北</span></p>
 						</section>
 					</div>
 				</div>
@@ -63,9 +70,9 @@
 					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
-			<!-- UY BEGIN -->
-			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2072544"></script>
-			<!-- UY END -->
+		</div>
+		<div style="display: none;">
+			<script src="http://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
 		</div>
 	</body>
 </html>
