--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>关于 - 路人甲</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="web开发组件化">
-		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
+		<meta name="description" content="关于本站">
+		<meta name="keywords" content="联系方式">
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="public/image/favicon.png">
 		<link rel="canonical" href="http://passser-by.com/index.html">
@@ -57,6 +57,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
+						<li><a href="/photograph.html">摄影</a></li>
 						<li><a href="/comment.html">留言</a></li>
 						<li class="active"><a href="/about.html">关于</a></li>
 					</ul>
