--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
+						<li><a href="/photograph.html">摄影</a></li>
 						<li><a href="/comment.html">留言</a></li>
 						<li><a href="/about.html">关于</a></li>
 					</ul>
