--- a/photograph.html
+++ b/photograph.html
@@ -28,6 +28,15 @@
 			.mod-content span{
 				margin:0 5px;
 			}
+
+			@media screen and (max-width: 800px)  {
+				.container{
+					padding: 0 15px;
+				}
+				.mod-content{
+					padding-top: 0;
+				}
+			}
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
