响应式问题修复

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.container{
+				min-height: 400px;
 				background: url('public/image/bg.jpg') center center no-repeat;
 				-webkit-filter: grayscale(100%);
 				-moz-filter: grayscale(100%);
