--- a/comment.html
+++ b/comment.html
@@ -63,9 +63,22 @@
 					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
-			<!-- UY BEGIN -->
-			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2072544"></script>
-			<!-- UY END -->
+			<!-- 多说评论框 start -->
+			<div class="ds-thread" data-thread-key="comment" data-title="评论" data-url="http://passer-by.com/comment.html"></div>
+			<!-- 多说评论框 end -->
+			<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+			<script type="text/javascript">
+			var duoshuoQuery = {short_name:"passerbycom"};
+				(function() {
+					var ds = document.createElement('script');
+					ds.type = 'text/javascript';ds.async = true;
+					ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+					ds.charset = 'UTF-8';
+					(document.getElementsByTagName('head')[0] 
+					 || document.getElementsByTagName('body')[0]).appendChild(ds);
+				})();
+				</script>
+			<!-- 多说公共JS代码 end -->
 		</div>
 	</body>
 </html>
