--- a/photograph.html
+++ b/photograph.html
@@ -40,9 +40,9 @@
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'], 
-				          i= e.length; 
-				while(i--){ 
+				var e = ['footer','header','section'],
+				          i= e.length;
+				while(i--){
 				      document.createElement(e[i]);
 				}
 			})();
@@ -69,7 +69,7 @@
 					<div class="mod-content">
 						<section>
 							<div><img src="public/image/photos/20150828.jpg" width="540"></div>
-							<p><span>2015年8月</span><span>台北</span></p>
+							<p><span>2015-08-28</span><span>台北</span></p>
 						</section>
 					</div>
 				</div>
