--- a/project.html
+++ b/project.html
@@ -40,9 +40,9 @@
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'], 
-				          i= e.length; 
-				while(i--){ 
+				var e = ['footer','header','section'],
+				          i= e.length;
+				while(i--){
 				      document.createElement(e[i]);
 				}
 			})();
@@ -76,9 +76,9 @@
 							</ul>
 						</section>
 						<section>
-							<h3>工具</h3>
+							<h3>APP</h3>
 							<ul>
-								<li><a href="/tools-library/browser/" target="_blank">浏览器及设备判断</a></li>
+								<li><a href="/relationship/app.html" target="_blank">三姑六婆计算器</a></li>
 							</ul>
 						</section>
 						<section>
@@ -112,12 +112,6 @@
 							</ul>
 						</section>
 						<section>
-							<h3>UI库</h3>
-							<ul>
-								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
-							</ul>
-						</section>
-						<section>
 							<h3>站点</h3>
 							<ul>
 								<li><a href="http://passerby.cn" target="_blank">随机导航网 [passerby.cn]</a></li>
@@ -128,6 +122,13 @@
 							<ul>
 								<li><a href="/pacman/" target="_blank">吃豆游戏</a></li>
 								<li><a href="/blackjack/" target="_blank">21点纸牌</a></li>
+							</ul>
+						</section>
+						<section>
+							<h3>其他</h3>
+							<ul>
+								<li><a href="/tools-library/browser/" target="_blank">浏览器及设备判断</a></li>
+								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
 						</section>
 					</div>
