--- a/comment.html
+++ b/comment.html
@@ -75,5 +75,8 @@
 				</div>
 			</footer>
 		</div>
+		<div style="display: none;">
+			<script src="http://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
+		</div>
 	</body>
 </html>
