--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'], 
-				          i= e.length; 
-				while(i--){ 
+				var e = ['footer','header','section'],
+				          i= e.length;
+				while(i--){
 				      document.createElement(e[i]);
 				}
 			})();
@@ -71,6 +71,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
+						<li><a href="/writing.html">文字</a></li>
 						<li><a href="/photograph.html">摄影</a></li>
 						<li><a href="/comment.html">留言</a></li>
 						<li class="active"><a href="/about.html">关于</a></li>
