--- a/project.html
+++ b/project.html
@@ -58,6 +58,7 @@
 				<div class="mod-list">
 					<ul>
 						<li class="active"><a href="/project.html">项目</a></li>
+						<li><a href="/writing.html">文字</a></li>
 						<li><a href="/photograph.html">摄影</a></li>
 						<li><a href="/comment.html">留言</a></li>
 						<li><a href="/about.html">关于</a></li>
