--- a/comment.html
+++ b/comment.html
@@ -25,9 +25,9 @@
 		</style>
 		<script>
 			(function(){ //IE低版本兼容
-				var e = ['footer','header','section'], 
-				          i= e.length; 
-				while(i--){ 
+				var e = ['footer','header','section'],
+				          i= e.length;
+				while(i--){
 				      document.createElement(e[i]);
 				}
 			})();
@@ -43,6 +43,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
+						<li><a href="/writing.html">文字</a></li>
 						<li><a href="/photograph.html">摄影</a></li>
 						<li class="active"><a href="/comment.html">留言</a></li>
 						<li><a href="/about.html">关于</a></li>
@@ -61,7 +62,7 @@
 									ds.type = 'text/javascript';ds.async = true;
 									ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
 									ds.charset = 'UTF-8';
-									(document.getElementsByTagName('head')[0] 
+									(document.getElementsByTagName('head')[0]
 									 || document.getElementsByTagName('body')[0]).appendChild(ds);
 								})();
 							</script>
