--- a/writing.html
+++ b/writing.html
@@ -2,34 +2,14 @@
 <html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
-		<title>路人甲 · Passer-by</title>
+		<title>文字 - 路人甲</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<meta name="description" content="路人甲个人网站,展示前端开发作品,致力于web开发组件化,Keep It Simple,Stupid">
-		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件,JavaScript">
-		<meta name="author" content="木木阳,mumuy,passerby" />
+		<meta name="description" content="web开发组件化">
+		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
+		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/index.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
-			.container{
-				min-height: 400px;
-				background: url('public/image/bg.jpg') center center no-repeat;
-				-webkit-filter: grayscale(100%);
-				-moz-filter: grayscale(100%);
-				-o-filter: grayscale(100%);
-				filter: grayscale(100%);
-				-webkit-background-size: cover;
-				-moz-background-size: cover;
-			    -o-background-size: cover;
-				background-size: cover;
-			}
-			.mod-foot{
-				color:#fff;
-			}
-			.mod-foot a{
-				color:#fff;
-			}
-
 			.mod-content section{
 				margin-bottom: 18px;
 			}
@@ -78,7 +58,7 @@
 				<div class="mod-list">
 					<ul>
 						<li><a href="/project.html">项目</a></li>
-						<li><a href="/writing.html">文字</a></li>
+						<li class="active"><a href="/writing.html">文字</a></li>
 						<li><a href="/photograph.html">摄影</a></li>
 						<li><a href="/comment.html">留言</a></li>
 						<li><a href="/about.html">关于</a></li>
@@ -86,7 +66,16 @@
 				</div>
 			</header>
 			<div class="container">
-
+				<div class="main">
+					<div class="mod-content">
+						<section>
+							<h3>笔记</h3>
+							<ul>
+								<li><a href="/front-end-note/" target="_blank">最短寻址</a></li>
+							</ul>
+						</section>
+					</div>
+				</div>
 			</div>
 			<footer>
 				<div class="mod-foot">
