--- a/writing.html
+++ b/writing.html
@@ -71,7 +71,7 @@
 						<section>
 							<h3>笔记</h3>
 							<ul>
-								<li><a href="/front-end-note/" target="_blank">前端代码段</a></li>
+								<li><a href="/front-end-note/" target="_blank">Web前端</a></li>
 							</ul>
 						</section>
 					</div>
