--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
 				margin-bottom: 5px;
 				font-size: 16px;
 			}
+			.mod-content p.link a{
+				margin:0 4px;
+			}
 			.mod-content p a:hover{
 				border-bottom: 1px dotted #666;
 			}
@@ -105,7 +108,10 @@
 						</section>
 						<section>
 							<h3>友情链接</h3>
-							<p><a href="http://maxiaoxiang.com" target="_blank">MSS。</a></p>
+							<p class="link">
+								<a href="http://maxiaoxiang.com" target="_blank">MSS。</a>
+								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
+							</p>
 						</section>
 					</div>
 				</div>
