--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 						</blockquote>
 						<section>
 							<h3>关于我</h3>
-							<p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自从走上程序猿的不归路……这就是我，一个路人甲~</p>
+							<p>标准的90后，喜欢特立独行，向往简约而不简单的生活。大学期间开始利用课余时间“间歇性”学习前端开发，自此走上程序猿的不归路……这就是我，一个路人甲~</p>
 						</section>
 						<section>
 							<h3>联系方式</h3>
