--- a/project.html
+++ b/project.html
@@ -103,6 +103,7 @@
 								</li>
 								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
 								<li><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></li>
+								<li><a href="/widget/jquery-citys/" target="_blank">城市三级联动</a></li>
 								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
