--- a/about.html
+++ b/about.html
@@ -110,6 +110,7 @@
 							<p class="link">
 								<a href="http://maxiaoxiang.com" target="_blank">MSS。</a>
 								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
+								<a href="http://www.lihuanyu.com/" target="_blank">环宇博客</a>
 							</p>
 						</section>
 					</div>
