--- a/project.html
+++ b/project.html
@@ -86,32 +86,32 @@
 							<h3>jQuery组件库</h3>
 							<ul>
 								<li>
-									<a class="hot" href="/widget/jquery-slider/" target="_blank">轮播</a>
-									/<a href="/widget/jquery-slider/subject.html" target="_blank">全屏滚动</a>
+									<a class="hot" href="http://jquerywidget.com/jquery-slider/" target="_blank">轮播</a>
+									/<a href="http://jquerywidget.com/jquery-slider/subject.html" target="_blank">全屏滚动</a>
 								</li>
-								<li><a href="/widget/jquery-tabs/" target="_blank">标签页</a></li>
-								<li><a href="/widget/jquery-scrollbar/" target="_blank">滚动条</a></li>
-								<li><a href="/widget/jquery-select/" target="_blank">下拉框</a></li>
-								<li><a href="/widget/jquery-range/" target="_blank">滑动条</a></li>
-								<li><a href="/widget/jquery-dialog/" target="_blank">对话框</a></li>
-								<li><a href="/widget/jquery-countdown/" target="_blank">倒计时</a></li>
-								<li><a href="/widget/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
-								<li><a href="/widget/jquery-headroom/" target="_blank">浮动菜单</a></li>
+								<li><a href="http://jquerywidget.com/jquery-tabs/" target="_blank">标签页</a></li>
+								<li><a href="http://jquerywidget.com/jquery-scrollbar/" target="_blank">滚动条</a></li>
+								<li><a href="http://jquerywidget.com/jquery-select/" target="_blank">下拉框</a></li>
+								<li><a href="http://jquerywidget.com/jquery-range/" target="_blank">滑动条</a></li>
+								<li><a href="http://jquerywidget.com/jquery-dialog/" target="_blank">对话框</a></li>
+								<li><a href="http://jquerywidget.com/jquery-countdown/" target="_blank">倒计时</a></li>
+								<li><a href="http://jquerywidget.com/jquery-imagezoom/" target="_blank">图片聚焦</a></li>
+								<li><a href="http://jquerywidget.com/jquery-headroom/" target="_blank">浮动菜单</a></li>
 								<li>
-									<a href="/widget/jquery-calendar/" target="_blank">日历</a>
-									/<a href="/widget/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+									<a href="http://jquerywidget.com/jquery-calendar/" target="_blank">日历</a>
+									/<a href="http://jquerywidget.com/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
 								</li>
-								<li><a href="/widget/jquery-popup/" target="_blank">弹出层</a></li>
-								<li><a href="/widget/jquery-suggestion/" target="_blank">搜索建议</a></li>
-								<li><a href="/widget/jquery-citys/" target="_blank">城市三级联动</a></li>
-								<li><a href="/widget/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
-								<li><a href="/widget/jquery-accordion/" target="_blank">手风琴</a></li>
+								<li><a href="http://jquerywidget.com/jquery-popup/" target="_blank">弹出层</a></li>
+								<li><a href="http://jquerywidget.com/jquery-suggestion/" target="_blank">搜索建议</a></li>
+								<li><a href="http://jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
+								<li><a href="http://jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
+								<li><a href="http://jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
 							</ul>
 						</section>
 						<section>
 							<h3>Zepto组件库</h3>
 							<ul>
-								<li><a href="/widget/zepto-slider/" target="_blank">轮播</a></li>
+								<li><a href="http://jquerywidget.com/zepto-slider/" target="_blank">轮播</a></li>
 							</ul>
 						</section>
 						<section>
@@ -124,6 +124,7 @@
 						<section>
 							<h3>站点</h3>
 							<ul>
+								<li><a href="http://jquerywidget.com" target="_blank">jQuery插件官网 [jquerywidget.com]</a></li>
 								<li><a href="http://passerby.cn" target="_blank">随机导航网 [passerby.cn]</a></li>
 							</ul>
 						</section>
