--- a/project.html
+++ b/project.html
@@ -124,8 +124,8 @@
 						<section>
 							<h3>站点</h3>
 							<ul>
-								<li><a href="http://jquerywidget.com" target="_blank">jQuery插件官网 [jquerywidget.com]</a></li>
-								<li><a href="http://passerby.cn" target="_blank">随机导航网 [passerby.cn]</a></li>
+								<li><a href="http://jquerywidget.com" target="_blank">jQuery组件库官网</a></li>
+								<li><a href="http://passerby.cn" target="_blank">随机导航网</a></li>
 							</ul>
 						</section>
 						<section>
