--- a/project.html
+++ b/project.html
@@ -74,6 +74,7 @@
 								<li><a href="/finder/" target="_blank">最短寻址</a></li>
 								<li><a href="/calc24/" target="_blank">24点计算</a></li>
 								<li><a href="/relationship/" target="_blank">中国家庭称谓计算</a></li>
+								<li><a href="/chinese-transverter/" target="_blank">中文简体繁体转换器</a></li>
 							</ul>
 						</section>
 						<section>
