--- a/comment.html
+++ b/comment.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="留言">
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="public/image/favicon.png">
-		<link rel="canonical" href="http://passser-by.com/index.html">
+		<link rel="canonical" href="http://passser-by.com/comment.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content{
