--- a/photograph.html
+++ b/photograph.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="摄影,照片,爱好">
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="canonical" href="http://passser-by.com/photograph.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content{
