--- a/writing.html
+++ b/writing.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="web前端开发,前端组件,组件库,jQuery插件">
 		<meta name="author" content="木木阳,mumuy" />
 		<link rel="shortcut icon" href="/public/image/favicon.png">
+		<link rel="canonical" href="http://passser-by.com/writing.html">
 		<link rel="stylesheet" href="public/style/common.css">
 		<style>
 			.mod-content section{
