--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
 							<h3>友情链接</h3>
 							<p class="link">
 								<a href="http://maxiaoxiang.com/" target="_blank">MSS。</a>
+								<a href="http://chuangzaoshi.com/" target="_blank">创造狮导航</a>
 								<a href="http://www.nowamagic.net/" target="_blank">简明现代魔法</a>
 								<a href="https://wujunze.com/" target="_blank">吴钧泽博客</a>
 								<a href="http://www.lihuanyu.com/" target="_blank">环宇博客</a>
