--- a/project.html
+++ b/project.html
@@ -108,6 +108,7 @@
 								<li><a href="http://jquerywidget.com/jquery-citys/" target="_blank">城市三级联动</a></li>
 								<li><a href="http://jquerywidget.com/jquery-inputFormat/" target="_blank">格式化输入框</a></li>
 								<li><a href="http://jquerywidget.com/jquery-accordion/" target="_blank">手风琴</a></li>
+								<li><a href="http://jquerywidget.com/jquery-emoticons/" target="_blank">聊天表情</a></p></li>
 							</ul>
 						</section>
 						<section>
