--- a/writing.html
+++ b/writing.html
@@ -75,6 +75,12 @@
 								<li><a href="/front-end-note/" target="_blank">Web前端</a></li>
 							</ul>
 						</section>
+						<section>
+							<h3>查询文档</h3>
+							<ul>
+								<li><a href="http://passer-by.com/api/" target="_blank">常用API</a></li>
+							</ul>
+						</section>
 					</div>
 				</div>
 			</div>
