--- a/project.html
+++ b/project.html
@@ -134,7 +134,7 @@
 						<section>
 							<h3>其他</h3>
 							<ul>
-								<li><a href="/tools-library/browser/" target="_blank">浏览器及设备判断</a></li>
+								<li><a href="/browser/" target="_blank">浏览器及设备判断</a></li>
 								<li><a href="/fancy-icon/" target="_blank">纯CSS图标</a></li>
 							</ul>
 						</section>
