--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -21,21 +21,19 @@
         <script>
             var size = Math.min(window.innerHeight,window.innerWidth);
             var radio = window.devicePixelRatio||1;
-            var $image = document.getElementById('image');
-            var $logo = new Image();
-            $logo.src = 'image/panda.png';
-            $logo.onload = function(){
-                var obj = new createQRImage({
-                    'width': size*radio,
-                    'margin': 20,
-                    'fgColor':'rgb(255, 241, 0)',
-                    'gcColor':'rgb(0, 174, 239)',
-                    'logoimg':$logo
-                });
+            var obj = new createQRImage({
+                'text':'http://passer-by.com/',
+                'width': size*radio,
+                'margin': 20,
+                'fgColor':'rgb(255, 241, 0)',
+                'gcColor':'rgb(0, 174, 239)',
+                'logo':'image/panda.png'
+            },function(){
+                var $image = document.getElementById('image');
                 $image.src = obj.getBase64();
                 $image.width = size;
                 $image.height = size;
-            };
+            });
         </script>
     </body>
 </html>
