--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 			</div>
 			<footer>
 				<div class="mod-foot">
-					<p>Copyright &copy; <a href="/">passer-by.com</a></p>
+					<p>Copyright &copy; 2017 <a href="/">passer-by.com</a></p>
 				</div>
 			</footer>
 		</div>
